--- a/.github/workflows/build_my_firmware.yml
+++ b/.github/workflows/build_my_firmware.yml
@@ -11,11 +11,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: d3adb5/build-qmk-fw@v1
         with:
-          keyboard: dztech/dz65rgb/v3
-          keymap: my-keymap
-          controller: helios
-          local-keymap-path: keymaps/my-keymap
-          output-dir: qmk-firmware-to-be-flashed
+          keyboard: crkbd
+          keymap: default
 
       - uses: actions/upload-artifact@v4
         with:
